
<resources>
    <string name="API_KEY">AIzaSyBUnI9ytw4Z9qFyFGF9YuRj7fY7hWOKi8Y</string>

    <string name="app_name">Carros</string>

    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>

    <string name="error_email">E-mail inválido!</string>
    <string name="error_senha">Senha inválida!</string>

    <string name="problema_conexao">Sem conexão com a internet!</string>

    <string name="carregando">Aguarde, carregando...</string>

    <string name="sobre">Sobre</string>

    <string name="carros">Carros</string>
    <string name="classicos">Clássicos</string>
    <string name="esportivos">Esportivos</string>
    <string name="luxo">Luxo</string>
    <string name="favoritos">Favoritos</string>

    <string name="site_livro">Site do Livro</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>

    <string name="descricao">Descrição</string>
    <string name="video">Vídeo</string>
    <string name="localização">Localização</string>
    <string name="add_favoritos">Carro adicionado aos Favoritos!</string>
    <string name="del_favoritos">Carro removido dos Favoritos!</string>

    <string name="sobre_titulo">Aplicativo Carros</string>
    <string name="sobre_mensagem">Desenvolvido por Paulo Andrade, com base nos livros Android Essencial e Dominando o Android, da Editora NOVATEC. Versão 1.0</string>
    <string name="sobre_btn_fechar">Fechar</string>

</resources>
