<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/padding"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_titulo"
        android:paddingBottom="@dimen/padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_mensagem"
        android:paddingBottom="@dimen/padding" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_btn_fechar"
        android:id="@+id/sobre_btn_fechar"
        android:layout_gravity="center_horizontal" />


</LinearLayout>